# orion-complex

./: .gitignore  CLAUDE.md  Cargo.toml  dev.sh
database/: sqlite-schema.sql
docs/: system-overview.md
macos-agent/: Package.resolved  Package.swift
macos-agent/Sources/CaptureImage/: CaptureImageCommand.swift
macos-agent/Sources/GuestAgent/: main.swift
macos-agent/Sources/NodeAgent/: APIClient.swift  Config.swift  IPSWRestore.swift  NodeAgentCommand.swift  PollCycle.swift  PortForwarder.swift  TemplateManager.swift  VMManager.swift  main.swift
macos-agent/Sources/VMSetup/: VMSetupApp.swift
migrations/: 0001_initial.sql  0002_resources_events.sql  0003_task_env_snapshot_name.sql  0004_port_forwarding.sql  0005_webauthn.sql  0006_totp.sql  0007_environment_name.sql  0008_iso_url.sql  0009_bypass_hw_check.sql  0010_win_install_options.sql  0011_usb_attachments.sql
spec/: openapi.yaml
src/: auth.rs  background.rs  config.rs  db.rs  error.rs  events.rs  lib.rs  main.rs  models.rs  tasks.rs  tls.rs
src/api/: auth.rs  dashboard.rs  environments.rs  events.rs  health.rs  images.rs  mod.rs  nodes.rs  snapshots.rs  ssh_keys.rs  tasks.rs  uploads.rs  usb.rs  users.rs  webauthn.rs  ws.rs
src/vm/: hyperv.rs  libvirt.rs  mod.rs  stub.rs
tests/: api_tests.rs
web/: package-lock.json  package.json  rollup.novnc.mjs  server.mjs
web/public/: novnc-rfb.js
web/src/app/: layout.tsx  page.tsx
web/src/app/(authenticated)/: layout.tsx
web/src/app/(authenticated)/admin/images/: page.tsx
web/src/app/(authenticated)/dashboard/: page.tsx
web/src/app/(authenticated)/ssh-keys/: page.tsx
web/src/app/login/: page.tsx
web/src/components/: AuthProvider.tsx  Sidebar.tsx  StateBadge.tsx
web/src/lib/: api.ts  auth.ts  format.ts  types.ts
(+5 files in other folders)
