[package]
name = "orion-complex"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
base64 = "0.22"
russh = "0.46"
async-trait = "0.1"
futures-util = "0.3"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
webauthn-rs-proto = "0.5"
url = "2"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"
rustls = "0.23"
rustls-pki-types = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
